# sixdegreesofpgp

./: .dockerignore  .env  .env.local  Cargo.toml  README.md  compose.yml
.github/: CONTRIBUTING.md  dependabot.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
config/nginx/: nginx.conf
config/nginx/snippets/: security.conf
config/nginx/static/: no-ai.txt
config/nginx/templates/: api.conf.template  frontend.conf.template
frontend/: .gitignore  Dockerfile  LICENSE
frontend/website/: .env  index.html
frontend/website/src/: api.ts  vite-env.d.ts
frontend/website/src/components/: PageInput.tsx
libsdop/: Cargo.toml
libsdop/src/: db.rs  lib.rs
loader/: Cargo.toml
loader/src/: graph.rs  lib.rs  main.rs
scripts/: isscert.dev.sh  server_cert.conf  start.dev.sh
secrets/: neo4j.txt
src/: graph.rs  lib.rs  main.rs  sig_store.rs  wot.rs
website/: package-lock.json  package.json  vite.config.js
website/src/components/common/: Logo.tsx
website/src/resources/: constants.ts
