[workspace]
members = ["cli", "libsdop", "loader"]

[workspace.package]
authors = ["Alessio Artoni"]
categories = ["command-line-utilities", "visualization"]
description = "Tool to show degrees of separations between two given PGP fingerprints."
edition = "2021"
keywords = ["cryptography", "PGP", "signatures", "six-degrees-of-separation", "graphs"]
license = "Unlicense"
name = "sixdegreesofpgp"
readme = "README.md"
repository = "https://github.com/aartoni/sixdegreesofpgp"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.lints.clippy]
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 2 }
pedantic = "warn"
nursery = "warn"
