[package]
authors.workspace = true
categories = ["visualization"]
description = "Show the graph edges on the command line."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cli"
readme = "README.md"
repository = "https://github.com/aartoni/sixdegreesofpgp/cli"
rust-version.workspace = true
version.workspace = true

[dependencies]
dotenvy = "0.15.7"
libsdop = { path = "../libsdop" }
neo4rs = "0.8.0"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
