[package]
authors.workspace = true
categories = ["visualization"]
description = "Show the graph edges on the command line."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cli"
readme = "README.md"
repository = "https://github.com/aartoni/sixdegreesofpgp/cli"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = "4.5.23"
dotenvy = "0.15.7"
libsdop = { path = "../libsdop" }
neo4rs = "0.8.0"
tokio = "1.42.0"

[lints]
workspace = true
